--- a/index.html
+++ b/index.html
@@ -9,17 +9,29 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <h1>Etch-a-sketch</h1>
-    <div class="big">
-           <button class="grid-count">Choose your grid! </button> 
-    <div class="sketch">
-        
+    <header><h1>Etch-a-sketch</h1>
+</header>
+<div class="important-buttons">
+           <button class="colorPick">Choose your color! </button> 
+           <input class="hidden" type="color" id="color" name="favcolor" value="#ff0000"><br><br>
+           <button class="eraser">Eraser   <img src="./icons8-eraser-68.png" width="20px" alt=""></button>
+           <button class="clear">Clear </button> 
+           <div class="slider">
+            <p>Pick your grid size!</p>
+            <input type="range" min="2" max="16" value="16" id="slider">
+            <p class="value">16</p>
+        </div>
+</div>
+
+
+<div class="game-container">
     <div class="container">
         
 
-    </div>
-</div>
-            </div>
-
+    </div></div>
+</div> 
+<footer>
+copyright cedogithub ©
+</footer>
 </body>
 </html>
