--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,30 +9,34 @@
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
+
 <body>
-    <header><h1>Etch-a-sketch</h1>
-</header>
-<div class="important-buttons">
-           <button class="colorPick">Choose your color! </button> 
-           <input class="hidden" type="color" id="color" name="favcolor" value="#ff0000"><br><br>
-           <button class="eraser">Eraser   <img src="./icons8-eraser-68.png" width="20px" alt=""></button>
-           <button class="clear">Clear </button> 
-           <div class="slider">
+    <header>
+        <h1>Etch-a-sketch</h1>
+    </header>
+    <div class="important-buttons">
+        <button class="colorPick">Choose your color! </button>
+        <input class="hidden" type="color" id="color" name="favcolor" value="#ff0000"><br><br>
+        <button class="eraser">Eraser <img src="./icons8-eraser-68.png" width="20px" alt=""></button>
+        <button class="clear">Clear </button>
+        <div class="slider">
             <p>Pick your grid size!</p>
             <input type="range" min="2" max="16" value="16" id="slider">
             <p class="value">16</p>
         </div>
-</div>
+    </div>
 
 
-<div class="game-container">
-    <div class="container">
-        
+    <div class="game-container">
+        <div class="container">
 
-    </div></div>
-</div> 
-<footer>
-copyright cedogithub ©
-</footer>
+
+        </div>
+    </div>
+    </div>
+    <footer>
+        copyright cedogithub ©
+    </footer>
 </body>
+
 </html>
